# ecktra

./: .gitignore  LICENSE-MIT  README.md  decode.rkt  foreign.rkt  gui.rkt  info.rkt  main.rkt  ringbuf.rkt  seq.rkt  transform.rkt  visualize.rkt
.github/workflows/: ci.yml
examples/: amplitude-image.rkt  dft-circle.rkt  print-amplitude.rkt  show-dft.rkt  show-filter.rkt  show-wave.rkt  wave-circle.rkt  wave.rkt
examples/stars/: stars.rkt
foreign/: AudioStream.h  Av.h  CMakeLists.txt  Fft.cc  Interface.cc  decode.rkt  ecktra.cc  fft.cc  fft.rkt  foreign.rkt
scribblings/: ecktra.scrbl
transform/: dft.rkt  fft.rkt  frame.rkt  numeric.rkt
util/: fps.rkt  ringbuf.rkt  seq.rkt
visualizer/: buffer.rkt  cl.rkt  gui-frame.rkt  gui.rkt  input.rkt  lang.rkt  macros.rkt  main.rkt  ops.rkt  plot.rkt  processes.rkt  ringbuf.rkt  signal.rkt
visualizer/lang/: reader.rkt
